Fix broken onboarding experience
to something kind of janky

--- a/public/styles.css
+++ b/public/styles.css
@@ -148,7 +148,7 @@ td {
   width: 80vw;
   left: 50%;
   top: 50%;
-  max-width: 600px;
+  max-width: 950px;
   transform: translateX(-50%) translateY(-50%);
   border: 2px solid black;
   border-radius: 8px;
@@ -165,7 +165,7 @@ td {
 
 .modal-body {
   padding: 1rem;
-  max-height: 40vh;
+  max-height: 60vh;
   overflow-y: scroll;
 }
 
